# delta-stable

./: README.md  pyproject.toml
.github/workflows/: typed-transport.yml
current_tasks/: T001.md  T002.md  T003.md  T004.md  T005.md  T006.md  T007.md  T008.md  T009.md  T010.md  T011.md  T012.md  T013.md  T014.md  T015.md  T016.md  T017.md  T018.md  T019.md  T020.md  T021.md  T022.md  T023.md  T024.md  T025.md  T026.md  T027.md  T028.md  T029.md  T030.md  T031.md  T032.md  T033.md  T034.md  T035.md  T036.md  T037.md  T038.md  T039.md  T040.md  (+47 more)
docs/: funding-arb-architecture-overview.md  funding-arb-runbook.md  live-exchange-onboarding.md  operations-checklist.md  operator-guide.md  project-analysis-guide.md  pydantic-modeling-guide.md  runtime-composition-guide.md  simple-usage-manual.md  type-checking-guide.md  typed-transport-guide.md
examples/: backtest_report.py  backtest_threshold_strategy.py  control_api.py  exchange_public_data.py  feishu_integration.py  live_binance_smoke.py  monitoring_alerts.py  multi_exchange_scan.py  pair_execution.py  portfolio_and_risk.py  runtime_smoke.py  single_exchange_scan.py  storage_repository.py  strategy_spot_perp.py
examples/data/: binance_btcusdt_2026_02_sample.csv
scripts/: fetch_backtest_dataset.py  run_funding_arb_dry_run.py
src/arb/: __init__.py  cli.py  cli_support.py  config.py  errors.py  logging.py  models.py
src/arb/backtest/: __init__.py  dataset_fetcher.py  (+4 more)
src/typed_transport/: USAGE.md  __init__.py  errors.py  http.py  types.py  ws.py
tests/: test_config.py  test_imports.py  test_live_runtime.py  test_models.py  test_settings.py
tests/factories/: __init__.py  market.py
tests/test_backtest/: test_backtest.py  test_dataset_fetcher.py
tests/test_bootstrap/: test_funding_arb_app.py  test_live_runtime_factory.py
tests/test_cli/: test_cli.py
tests/test_control/: __init__.py  test_command_dispatcher.py  test_control_api.py  test_service_bridge.py
tests/test_exchange/: __init__.py  test_base_exchange.py  test_binance_exchange.py  test_bitget_exchange.py  test_bybit_exchange.py  test_gate_exchange.py  test_htx_exchange.py  test_okx_exchange.py
tests/test_execution/: test_execution_engine.py  test_order_tracker.py  test_private_event_hub.py  test_protocols.py
tests/test_integrations/: test_feishu.py  test_funding_arb_e2e.py
tests/test_market/: __init__.py  test_market_collector.py  test_market_router.py  test_spot_perp_view.py
tests/test_monitoring/: test_funding_board.py  test_monitoring.py
tests/test_net/: test_http_transport.py  test_schemas.py  test_ws_transport.py
tests/test_pnl/: __init__.py  test_pnl.py
tests/test_portfolio/: __init__.py  test_portfolio.py  test_reconciler.py
tests/test_risk/: __init__.py  test_position_monitor.py  test_risk.py
tests/test_runtime/: test_binance_runtime.py  test_bitget_runtime.py  test_bybit_runtime.py  test_cross_exchange_funding_service.py  test_funding_arb_service.py  test_gate_runtime.py  test_htx_runtime.py  test_okx_runtime.py  test_realtime_scanner.py  test_recovery.py  test_runtime_components.py  test_smoke.py  test_supervisor.py
tests/test_scanner/: test_funding_scanner.py
tests/test_schemas/: test_base.py
tests/test_storage/: test_repository.py
tests/test_strategy/: test_strategy_engine.py
tests/test_typed_transport/: test_http_transport.py  test_types.py  test_ws_transport.py
tests/test_utils/: test_symbols.py
tests/test_workflows/: test_close_position.py  test_open_position.py
tests/test_ws/: __init__.py  test_base_ws.py  test_ws_binance.py  test_ws_bitget.py  test_ws_bybit.py  test_ws_gate.py  test_ws_htx.py  test_ws_okx.py
(+126 files in other folders)
