[project]
name = "delta-stable"
version = "0.1.0"
description = "CEX funding rate arbitrage toolkit"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.10.0",
]

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
pretty = true
show_error_codes = true
warn_unused_configs = true
warn_return_any = true
disallow_any_generics = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true
files = [
    "src/arb/schemas",
    "src/arb/bootstrap/schemas.py",
    "src/arb/control/schemas.py",
    "src/arb/integrations/feishu/schemas.py",
    "src/arb/market/schemas.py",
    "src/arb/net/schemas.py",
    "src/arb/ws/schemas.py",
    "tests/factories",
]
