[project]
name = "delta-stable"
version = "0.1.0"
description = "CEX funding rate arbitrage toolkit"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.10.0",
    "typer>=0.16.0",
    "websockets>=14.0",
]

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
pretty = true
show_error_codes = true
warn_unused_configs = true
warn_return_any = true
disallow_any_generics = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true
files = [
    "src/arb/backtest/schemas.py",
    "src/arb/backtest/dataset_fetcher.py",
    "src/arb/backtest/loader.py",
    "src/arb/backtest/report.py",
    "src/arb/backtest/simulator.py",
    "src/arb/schemas",
    "src/arb/bootstrap/schemas.py",
    "src/arb/control/api.py",
    "src/arb/control/deps.py",
    "src/arb/control/dispatcher.py",
    "src/arb/control/schemas.py",
    "src/arb/control/service_bridge.py",
    "src/arb/config/__init__.py",
    "src/arb/config/live.py",
    "src/arb/execution/executor.py",
    "src/arb/execution/order_tracker.py",
    "src/arb/execution/protocols.py",
    "src/arb/integrations/feishu/schemas.py",
    "src/arb/market/schemas.py",
    "src/arb/net/schemas.py",
    "src/arb/portfolio/reconciler.py",
    "src/arb/risk/position_monitor.py",
    "src/arb/runtime/binance_runtime.py",
    "src/arb/runtime/bitget_runtime.py",
    "src/arb/runtime/bybit_runtime.py",
    "src/arb/runtime/cross_exchange_funding_service.py",
    "src/arb/runtime/funding_arb_service.py",
    "src/arb/runtime/gate_runtime.py",
    "src/arb/runtime/htx_runtime.py",
    "src/arb/runtime/okx_runtime.py",
    "src/arb/runtime/pipeline.py",
    "src/arb/runtime/realtime_scanner.py",
    "src/arb/scanner/funding_scanner.py",
    "src/arb/settings/exchanges.py",
    "src/arb/settings/strategies.py",
    "src/arb/storage/repository.py",
    "src/arb/storage/schemas.py",
    "src/typed_transport",
    "src/arb/workflows/close_position.py",
    "src/arb/workflows/open_position.py",
    "src/arb/ws/schemas.py",
    "tests/factories",
]
